# nixos

./: Makefile  flake.nix  flake.nix.bak  home.nix  result  shell.nix
configs/: p10k.zsh
system/: configuration.nix  hardware-configuration.nix
users/kid/: home.nix
xmonad/: .gitignore  CHANGELOG.md  flake.nix  hie.yaml  kid-xmonad.cabal  overlay.nix  result  xmonad-kid.cabal  xmonad.hs
