name:          xmonad-kid
version:       0.1.0.0
synopsis:      Arnaud Rebts's xmonad configuration.
author:        Arnaud Rebts
maintainer:    arnaud.rebts@gmail.com
category:      System
build-type:    Simple
cabal-version: >=1.10

executable xmonad
  main-is:          xmonad.hs
  build-depends:
      base
    , xmobar
    , xmonad
    , xmonad-contrib
    , X11
    , containers
    , utf8-string

  hs-source-dirs:   .
  default-language: Haskell2010
